--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   video_player: ^2.4.7
   cached_network_image: ^3.2.1
+  share_plus: ^6.3.0
+  timeago: ^3.3.0
+  flutter_smart_dialog: ^4.7.1
 
 dev_dependencies:
   flutter_test:
