--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_smart_dialog: ^4.7.1
   readmore: ^2.2.0
   event_bus: ^2.0.0
+  marquee: ^2.2.3
 
 dev_dependencies:
   flutter_test:
