--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   readmore: ^2.2.0
   event_bus: ^2.0.0
   marquee: ^2.2.3
+  font_awesome_flutter: ^10.3.0
 
 dev_dependencies:
   flutter_test:
