--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,3 +106,13 @@ flutter:
     - family: TikTokIcons
       fonts:
         - asset: assets/fonts/TikTokIcons.ttf
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/PoppinsBold.ttf
+        - asset: assets/fonts/PoppinsMedium.ttf
+        - asset: assets/fonts/PoppinsRegular.ttf
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/InterBold.ttf
+        - asset: assets/fonts/InterMedium.ttf
+        - asset: assets/fonts/InterRegular.ttf
