--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   event_bus: ^2.0.0
   marquee: ^2.2.3
   font_awesome_flutter: ^10.3.0
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
