--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   marquee: ^2.2.3
   font_awesome_flutter: ^10.3.0
   searchfield: ^0.7.3
+  visibility_detector: ^0.3.3
+  flick_video_player: ^0.5.0
 
 dev_dependencies:
   flutter_test:
